# homebox_client

./: .gitignore  .gitlab-ci.yml  README.md  homebox.json  homebox_fixed.json  openapi-python-client.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: python.yml  release.yml
.openapi-generator/: FILES
docs/: ActionsApi.md  AttachmentType.md  AuthenticationApi.md  AuthrolesRole.md  BaseApi.md  CurrenciesCurrency.md  EntAttachment.md  EntAttachmentEdges.md  EntAuthRoles.md  EntAuthRolesEdges.md  EntAuthTokens.md  EntAuthTokensEdges.md  EntGroup.md  EntGroupEdges.md  EntGroupInvitationToken.md  EntGroupInvitationTokenEdges.md  EntItem.md  EntItemEdges.md  EntItemField.md  EntItemFieldEdges.md  EntLabel.md  EntLabelEdges.md  EntLocation.md  EntLocationEdges.md  EntMaintenanceEntry.md  EntMaintenanceEntryEdges.md  EntNotifier.md  EntNotifierEdges.md  EntUser.md  EntUserEdges.md  GroupApi.md  ItemMaintenanceApi.md  ItemfieldType.md  ItemsApi.md  ItemsAttachmentsApi.md  LabelsApi.md  LocationsApi.md  MaintenanceApi.md  NotifiersApi.md  RepoBarcodeProduct.md  (+56 more)
homebox_client/: __init__.py  api_client.py  api_client.pyi  configuration.py  exceptions.py  exceptions.pyi  rest.py  rest.pyi
homebox_client/api/: __init__.py  actions_api.py  authentication_api.py  base_api.py  group_api.py  item_maintenance_api.py  items_api.py  items_attachments_api.py  labels_api.py  locations_api.py  (+5 more)
scripts/: postgen_fixup.py  pregen_fixup.py  test_homebox_api.py
test/: test_actions_api.py  test_attachment_type.py  test_authentication_api.py  test_authroles_role.py  test_base_api.py  test_currencies_currency.py  test_ent_attachment.py  test_ent_attachment_edges.py  test_ent_auth_roles.py  test_ent_auth_roles_edges.py  test_ent_auth_tokens.py  test_ent_auth_tokens_edges.py  test_ent_group.py  test_ent_group_edges.py  test_ent_group_invitation_token.py  test_ent_group_invitation_token_edges.py  test_ent_item.py  test_ent_item_edges.py  test_ent_item_field.py  test_ent_item_field_edges.py  test_ent_label.py  test_ent_label_edges.py  test_ent_location.py  test_ent_location_edges.py  test_ent_maintenance_entry.py  test_ent_maintenance_entry_edges.py  test_ent_notifier.py  test_ent_notifier_edges.py  test_ent_user.py  test_ent_user_edges.py  test_group_api.py  test_item_maintenance_api.py  test_itemfield_type.py  test_items_api.py  test_items_attachments_api.py  test_labels_api.py  test_locations_api.py  test_maintenance_api.py  test_notifiers_api.py  test_repo_barcode_product.py  (+56 more)
(+90 files in other folders)
