[project]
name = "homebox_client"
version = "1.0.0"
description = "Homebox API"
authors = [
  {name = "pfa", email = "pfa230@pfa.name"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["OpenAPI", "openapi-python-client", "Homebox API"]
requires-python = ">=3.9"

dependencies = [
  "attrs (>=22.2.0)",
  "httpx (>=0.23.0,<0.29.0)",
]

[project.urls]
Repository = "https://github.com/pfa230/homebox_client"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">= 7.2.1"
pytest-cov = ">= 2.8.1"
tox = ">= 3.9.0"
flake8 = ">= 4.0.0"
mypy = ">= 1.5"
pyright = ">= 1.1.0"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "attrs"

[tool.mypy]
files = [
  "homebox_client",
  "scripts",
]
exclude = "^(build|dist)/"
# TODO: enable "strict" once all these individual checks are passing
# strict = true

# List from: https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

## Getting these passing should be easy
strict_equality = true
extra_checks = true

## Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

## These shouldn't be too much additional work, but may be tricky to
## get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

### These next few are various gradations of forcing use of type annotations
#disallow_untyped_calls = true
#disallow_incomplete_defs = true
#disallow_untyped_defs = true
#
### This one isn't too hard to get passing, but return on investment is lower
#no_implicit_reexport = true
#
### This one can be tricky to get passing if you use a lot of untyped libraries
#warn_return_any = true

[[tool.mypy.overrides]]
module = [
  "homebox_client.api.*",
  "homebox_client.models.*",
]
ignore_errors = true
follow_imports = "skip"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
venvPath = "."
venv = ".venv"
include = ["homebox_client", "scripts"]
ignore = [
  "homebox_client/client.py",
  "scripts/pregen_fixup.py",
]
exclude = [
  ".venv",
  "build",
  "dist",
  "homebox_client.egg-info",
  "homebox_client/api",
  "homebox_client/models",
  "test",
  "tests",
]

[tool.pytest.ini_options]
addopts = "--ignore=test"
